crates/aranya-policy-compiler/tests/data/actions/call_not_in_action_invalid_statement.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid statement
  |
2 | function foo() int {
3 |     action bar()
  |     ^^^^^^^^^^^^ statement not allowed in pure function context
4 |     return 0
5 | }
  |
